add image and paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>hello</title>
 </head>
 <body>
-    hello jas
+    <h1>CP值超高的泰國菜</h1>
+    <h2>泰式打拋豬</h2>
+    <p>在善導寺站靠近杭州南路上，有一家非常好吃的泰式簡餐店，極其推薦泰式打拋豬</p>
+    <p>餐點內容包含主菜打拋豬、泰式香米飯、半熟蛋和蝦醬高麗菜，讓我們一探究竟吧！</p>
+    <img src="food.jpg" alt="泰式打拋豬" width="300">
+
+
 </body>
 </html>
