--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>hello</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CP值超高的泰國菜</h1>
-    <h2>泰式打拋豬</h2>
-    <p>在善導寺站靠近杭州南路上，有一家非常好吃的泰式簡餐店，極其推薦泰式打拋豬</p>
-    <p>餐點內容包含主菜打拋豬、泰式香米飯、半熟蛋和蝦醬高麗菜，讓我們一探究竟吧！</p>
-    <img src="food.jpg" alt="泰式打拋豬" width="300">
-
-
+    <button type="button" class="button enter">進入網頁</button>
+    <button type="button" class="button sunnyday">今天天氣真晴朗</button>
+    <a href="https://google.com" target="_blank" class="button">Google</a>
 </body>
 </html>
