--- a/table.html
+++ b/table.html
@@ -14,8 +14,12 @@
       <th>
         <a href="https://zh.wikipedia.org/wiki/%E6%95%99%E8%82%B2%E6%95%88%E7%9B%8A%E5%AD%A6">教學法</a>
       </th>
-      <th>效果量</th>
-      <th>以誰為中心</th>
+      <th>
+          <a href="https://zh.wikipedia.org/wiki/%E6%95%88%E5%BA%94%E5%80%BC">效果量</a>
+      </th>
+      <th>
+        
+      </th>
     </tr>
     <tr>
       <td>直接教學法</td>
