add junyi file and logo

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>hello</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>hello</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button type="button" class="button enter">進入網頁</button>
-    <button type="button" class="button sunnyday">今天天氣真晴朗</button>
-    <a href="https://google.com" target="_blank" class="button">Google</a>
+  <button type="button" class="button enter">
+    <i class="fa fa-coffee" aria-hidden="true"></i> 進入網頁
+  </button>
+  <button type="button" class="button sunnyday">今天天氣真晴朗</button>
+  <a href="https://google.com" target="_blank" class="button">Google</a>
 </body>
+
 </html>
