--- a/junyi.html
+++ b/junyi.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+     <div>
+        <a href="https://www.junyiacademy.org/" target="_blank" class="button"></a>
+    </div> 
     
 </body>
 </html>
