--- a/junyi.html
+++ b/junyi.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>junyi</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>junyi</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-     <div>
-        <a href="https://www.junyiacademy.org/" target="_blank" class="button"></a>
-    </div> 
-    
+  <div class="container">
+    <div class="left">
+      <a href="https://www.junyiacademy.org/" class="logo-wraper button">
+        <img src="logo_256.png" class="logo">
+      </a>
+      <a href="#" class="button">
+        <i class="fa fa-book" aria-hidden="true"></i> 課程
+      </a>
+    </div>
+    <div class="right">
+        <a href="https://donate.junyiacademy.org/?utm_source=junyiacademy&utm_campaign=main_page_btn" target="_blank" class="button donate">
+          <i class="fa fa-heart-o" aria-hidden="true"></i> 支持均一
+        </a>
+        <a href="https://www.junyiacademy.org/missions#listKey=ag5zfmp1bnlpYWNhZGVteXIYCxILU3R1ZGVudExpc3QYgICIjLuqvAsM" class="button">
+          <i class="fa fa-users" aria-hidden="true"></i> 教學管理
+        </a>
+        <a href="https://www.junyiacademy.org/junyi-teacher-resources" class="button">
+          <i class="fa fa-file-text" aria-hidden="true"></i> 教師資源區
+        </a>
+        <a href="#" class="button">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="button">
+          <i class="fa fa-bell-o" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="button"> yw.wang</a>
+    </div>
+  </div>
+  <div class="dropdownlist">
+    <div class="userboard">
+        <div class="user-avatar">
+          <img src="foxcat-junior.png" class="userlogo">
+        </div>
+    </div>
+    <div class="dropdownlistitem">
+      <a href="https://www.junyiacademy.org/missions#listKey=ag5zfmp1bnlpYWNhZGVteXIYCxILU3R1ZGVudExpc3QYgICIjLuqvAsM" class="button1">
+        <i class="fa fa-users" aria-hidden="true"></i> 教學管理
+      </a>
+    </div>
+    <div class="dropdownlistitem">
+      <a href="https://www.junyiacademy.org/junyi-teacher-resources" class="button1">
+        <i class="fa fa-file-text" aria-hidden="true"></i> 教師資源區
+      </a>
+    </div>
+    <div class="dropdownlistitem">
+      <a href="https://www.junyiacademy.org/profile/" class="button1">
+        <i class="fa fa-graduation-cap" aria-hidden="true"></i> 我的學習
+      </a>
+    </div>
+    <div class="dropdownlistitem">
+      <a href="https://www.junyiacademy.org/account-setting" class="button1">
+        <i class="fa fa-cog" aria-hidden="true"></i> 個人資料設定
+      </a>
+    </div>
+    <div class="dropdownlistitem">
+      <a href="https://www.junyiacademy.org/" class="button1">
+        <i class="fa fa-sign-out" aria-hidden="true"></i> 登出
+      </a>
+    </div>
+  </div>
+
 </body>
 </html>
